--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="location_icon">Location Icon\n</string>
     <string name="today_report">Today\'s Report\n</string>
     <string name="forecast_report">Forecast Report\n</string>
-    <string name="pick_location">Pick Location\n</string>
+    <string name="pick_location">Pick A Location\n</string>
     <string name="find_city">Find the city  you want to know the  weather info about:</string>
     <string name="no_favourite">"No favourite location added yet! "</string>
     <string name="weather_icon">Weather Icon</string>
